# disktool

./: CMakeLists.txt
app/: CMakeLists.txt  disktool.c
include/: unistd.h
src/: CMakeLists.txt
